# dagster-poc

./: .gitignore  Dockerfile  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
src/: __init__.py  alignment.py  cbct_gum_region.py  cbct_nerve_channels.py  cbct_scan.py  cbct_segment_teeth.py  constants.py  crown_design.py  dental_scan.py  ios_scan.py  ios_segment_teeth.py  safe_data.py  segmentation_result.py
src/assets/: __init__.py  alignment.py  cbct_gum_region.py  cbct_nerve_channels.py  cbct_scan.py  cbct_segment_teeth.py  crown_design.py  ios_scan.py  ios_segment_teeth.py
src/jobs/: __init__.py  alignment_jobs.py  cbct_jobs.py  crown_design_jobs.py  general_jobs.py  ios_jobs.py
src/sensors/: __init__.py  alignment_sensors.py  cbct_sensors.py  crown_design_sensors.py  ios_sensors.py
